--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk/xai": "^2.0.23",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@vectorize-io/vectorize-client": "^0.4.0",
     "ai": "^5.0.56",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
